--- a/RRT/css/var/_color.scss
+++ b/RRT/css/var/_color.scss
@@ -1,9 +1,8 @@
 
-$white: #F8F8F8;
-$darkWhite: #EDEDED;
-$bg: #E9E9E9;
-$black: #363636;
-$gray:#C9C9C9;
-$darkGray:#858585;
-$bgDark: #2B2B2E;
-$orange: #EAAC0F;
+$white: #FFFFFF;
+$black: #2E2D2C;
+$darkGray:#878787;
+$gray:#CDCDCD;
+$lightGray:#878787;
+$primary: #6C518B;
+$secondary:#A790C4;
