--- a/RRT/css/_about.scss
+++ b/RRT/css/_about.scss
@@ -1,271 +1,108 @@
-.aFirst{
-  position: relative;
-  &__orange{
-    span{
-      background-color: $orange;
-    }
-  }
-  &__bg{
-    position: absolute;
-    top: 0;
-    left: 100%/24*19;
-    width: 100%/24*5;
-    height: 100%;
-    background-image: url(../img/about/1.jpg);
-    background-position: center;
-    background-size: cover;
-    @include media-breakpoint-down(lg) {
-      left: 100%/24*17;
-      width: 100%/24*7;
-    }
-    @include media-breakpoint-down(sm) {
-      display: none;
-    }
-  }
-}
-.aImages{
-  position: relative;
-  height:40vw;
-  @include media-breakpoint-down(md) {
-    height: 80vw;
-  }
-  &__1{
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%/24*19;
-    @include media-breakpoint-down(lg) {
-      width: 100%/24*17;
-    }
-    height: 100%;
-    background-image: url(../img/about/1.jpg);
-    background-position: center;
-    background-size: cover;
-  }
-  &__2{
-    position: absolute;
-    top: 0;
-    left: 100%/24*19;
-    width: 100%/24*5;
-    @include media-breakpoint-down(lg) {
-      left: 100%/24*17;
-      width: 100%/24*7;
-    }
-    height: 100%;
-    background:$orange;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    img{
-      height: 35%;
-      @include media-breakpoint-down(md) {
-        height: 50%;
-      }
-    }
-  }
-}
-.aAdvantages{
+.aPers{
   &__item{
+
+  }
+  &__itemImg{
     position: relative;
-    svg{
-      width: 100%;
-      height: auto;
-      stroke: $dark;
-      transition: 0.4s;
-    }
-    .p1{
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      padding: 4.16vw;
-      transform: translate(-50%, -50%);
-      width: 100%;
-      transition: 0.6s;
-    }
-    &:hover{
-      svg{
-        width: 100%;
-        height: auto;
-        fill: $orange;
-        stroke: $orange;
-      }
-      .p1{
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        padding: 4.16vw;
-        transform: translate(-50%, -50%);
-        width: 100%;
-        color: $dark;
-      }
-    }
-    &_orange{
-      svg{
-        width: 100%;
-        height: auto;
-        fill: $orange;
-        stroke: $orange;
-      }
-    }
-    &_noHover{
-      pointer-events: none;
-    }
-  }
-}
-.aInfo{
-  &__item{
-    display: flex;
-    @include media-breakpoint-down(sm) {
-     flex-direction: column;
-    }
-  }
-  &__itemTitle{
-    width: 100vw/24*4;
-    max-width: 100vw/24*4;
-    min-width: 100vw/24*4;
-    margin-right: 100vw/24*1;
-    text-align: right;
-    flex: auto;
-    color: $darkGray;
-    @include media-breakpoint-down(md) {
-      width: 100vw/24*5;
-      max-width: 100vw/24*5;
-      min-width: 100vw/24*5;
-    }
-    @include media-breakpoint-down(sm) {
-      text-align: left;
-      width: 100%;
-      max-width: 100%;
-      min-width: 100%;
-    }
-  }
-  &__itemText{
-    flex-shrink: 1;
-    // flex-grow: 1;
-  }
-}
-.aVacation{
-  &__wrap{
-    display: grid;
-    grid-template-areas:
-      "item1 item3"
-      "item2 item3";
-    grid-template-rows: 1fr 1fr;
-    grid-template-columns: 1fr 1fr;
-    grid-gap: 30px;
-    margin: 0;
-    @include media-breakpoint-down(sm) {
-      grid-template-areas:
-      "item1 item1"
-      "item2 item2"
-      "item3 item3"
-      "item3 item3";
-      grid-template-rows: 1fr 1fr 1fr 1fr;
-      grid-template-columns: 1fr 1fr;
-    }
-  }
-  &__item1{
-    grid-area: "item1";
-    height: 220px;
-    border:1px solid $darkGray;
-    padding: 30px;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: end;
-    @include media-breakpoint-down(sm) { height: 180px;}
-
-  }
-  &__item2{
-    grid-area: "item2";
-    height: 220px;
-    border:1px solid $darkGray;
-    padding: 30px;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: end;
-    @include media-breakpoint-down(sm) { height: 180px;}
-
-
-  }
-  &__item3{
-    grid-area: "item3";
-    border:1px solid $darkGray;
-    padding: 30px; 
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: end;
-    border-color: $orange;
-    background-color: $orange;
-    @include media-breakpoint-down(sm) { height: 320px;}
-
-  }
-}
-
-.aDoc{
-  &__wrap{
-    display: flex;
-    flex-wrap: wrap;
-  }
-  &__item{
-    width: 25%;
-    position: relative;
-    border-bottom: 1px solid $black;
-    border-right: 1px solid $black;
-    &::after{
-      content: '';
+    display: block;
+    width: 100%;
+    &::after {
+      content: "";
       display: block;
       padding-bottom: 100%;
     }
-    @include media-breakpoint-down(md) {
-      width: 50%;
-    }
-    &>a{
+    img {
       position: absolute;
       top: 0;
       left: 0;
       width: 100%;
       height: 100%;
-      display: flex;
-      flex-direction: column;
-      justify-content: space-between;
-      padding: 40px;
-      @include media-breakpoint-down(sm) {padding: 30px;}
+      object-fit: cover;
+      object-position: center;
     }
-    &_big{
-      width: 50%;
-      &::after{
-        padding-bottom: 50%;
-      }
-      @include media-breakpoint-down(md) {
-        width: 100%;
-      }
-    }
-    @include media-breakpoint-down(sm) {
-      width: 100%;
-      border-right: none;
-      &::after{
-        content: '';
-        display: none;
-      }
-      & > a{
-        position: static;
-        padding: 30px 0;
+    &_contain{
+      img{
+        object-fit: contain;
       }
     }
   }
-}
-.linesFooter{
-  height: 150px;
-  width: 100%;
-  background-image: url(../img/about/Lines.svg);
-  background-size: cover;
+
 }
 
-.cont{
-  &_white{
-    background-color: $white;
+.aGal{
+  height: 150vw/3*2;
+  overflow: hidden;
+  &__wrap{
+    // height: 100vw;
+  }
+  &__wrapInner{
+    width: 200vw/3*2;
+    height: 50vw/3*2;
+    // display: flex;
+    position: relative;
+  }
+  &__img1{
+    position: absolute;
+    top: 100%/996*190;
+    left: 100%/3920*160;
+    height: 100%/996*400;
+    width: 100%/3920*560;
+    object-fit: cover;
+  }
+  &__img2{
+    position: absolute;
+    top: 100%/996*516;
+    left: 100%/3920*880;
+    height: 100%/996*480;
+    width: 100%/3920*480;
+    object-fit: cover;
+  }
+  &__img3{
+    position: absolute;
+    top: 100%/996*37;
+    left: 100%/3920*1360;
+    height: 100%/996*480;
+    width: 100%/3920*480;
+    object-fit: cover;
+  }
+  &__img4{
+    position: absolute;
+    top: 100%/996*636;
+    left: 100%/3920*1440;
+    height: 100%/996*360;
+    width: 100%/3920*560;
+    object-fit: cover;
+  }
+  &__img5{
+    position: absolute;
+    top: 100%/996*198;
+    left: 100%/3920*2080;
+    height: 100%/996*400;
+    width: 100%/3920*560;
+    object-fit: cover;
+  }
+  &__img6{
+    position: absolute;
+    top: 100%/996*516;
+    left: 100%/3920*2800;
+    height: 100%/996*480;
+    width: 100%/3920*480;
+    object-fit: cover;
+  }
+  &__img7{
+    position: absolute;
+    top: 100%/996*37;
+    left: 100%/3920*3280;
+    height: 100%/996*480;
+    width: 100%/3920*480;
+    object-fit: cover;
+  }
+  &__img8{
+    position: absolute;
+    top: 100%/996*636;
+    left: 100%/3920*3360;
+    height: 100%/996*360;
+    width: 100%/3920*560;
+    object-fit: cover;
   }
 }
