--- a/RRT/css/_variables.scss
+++ b/RRT/css/_variables.scss
@@ -420,3 +420,17 @@ input {
     padding-bottom: 100%;
   }
 }
+
+.p404{
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  a{
+    width: 80%;
+    svg{
+      width: 100%;
+    }
+  }
+}
