--- a/RRT/css/style.scss
+++ b/RRT/css/style.scss
@@ -1,6 +1,8 @@
 // @import "swiper";
 @import "bootstrap/bootstrap";
 @import "variables";
+@import "accordion";
+@import "locomotive";
 @import "header";
 @import "footer";
 @import "mainPage";
