--- a/RRT/css/var/_font.scss
+++ b/RRT/css/var/_font.scss
@@ -2,8 +2,8 @@
 @font-face {
   font-family: 'Nudla';
   src: 
-  url('../font/Nudla-Thin.woff2') format('woff2'), 
-  url('../font/Nudla-Thin.woff') format('woff'), 
+  // url('../font/Nudla-Thin.woff2') format('woff2'), 
+  // url('../font/Nudla-Thin.woff') format('woff'), 
   url('../font/Nudla-Thin.ttf') format('truetype');
   font-weight: 100;
   font-style: normal;
