--- a/shum/css/style.scss
+++ b/shum/css/style.scss
@@ -6,10 +6,7 @@
 @import "header";
 @import "footer";
 @import "mainPage";
-@import "about";
+@import "about"; 
 @import "contact";
-@import "typObj";
-@import "prodCart";
-@import "proj";
-@import "serv";
-@import "rem";
+@import "children";
+
