--- a/shum/css/_variables.scss
+++ b/shum/css/_variables.scss
@@ -25,8 +25,8 @@ html {
 
 body {
   overflow-x: hidden;
-  background-color: $bg;
-  color: $dark;
+  background-color: $white;
+  color: $black1;
 }
 
 ul {
@@ -51,39 +51,39 @@ a,
 button {
   outline: none;
 }
-p > a,
-span > a,
-h1 > a,
-h2 > a,
-h3 > a,
-h4 > a,
-h5 > a,
-h6 > a,
-p > span,
-h1 > span,
-h2 > span,
-h3 > span,
-h4 > span,
-h5 > span,
-h6 > span {
-  font: inherit;
-  color: inherit;
-  &:hover,
-  &:focus,
-  &:active {
-    font: inherit;
-    color: inherit;
-  }
-}
+// p > a,
+// span > a,
+// h1 > a,
+// h2 > a,
+// h3 > a,
+// h4 > a,
+// h5 > a,
+// h6 > a,
+// p > span,
+// h1 > span,
+// h2 > span,
+// h3 > span,
+// h4 > span,
+// h5 > span,
+// h6 > span {
+//   font: inherit;
+//   color: inherit;
+//   &:hover,
+//   &:focus,
+//   &:active {
+//     font: inherit;
+//     color: inherit;
+//   }
+// }
 
 ::-webkit-scrollbar {
-  background-color: $gray;
+  background-color: $white;
 }
 ::-webkit-scrollbar-thumb {
-  background-color: $bgDark;
+  background-color: $gray2;
 }
 ::-webkit-scrollbar-thumb:hover {
-  background-color: $bgDark;
+  background-color: $gray1;
 }
 
 input::-webkit-outer-spin-button,
@@ -157,6 +157,131 @@ input[type="number"] {
     margin-bottom: $mpSM;
   }
 }
+.m-t-350 {
+  @include mTop(350px, 250px, 200px, 150px);
+}
+.m-b-350 {
+  @include mBot(350px, 250px, 200px, 150px);
+}
+.p-t-350 {
+  @include pTop(350px, 250px, 200px, 150px);
+}
+.p-b-350 {
+  @include pBot(350px, 250px, 200px, 150px);
+}
+
+.m-t-250 {
+  @include mTop(250px, 180px, 150px, 120px);
+}
+.m-b-250 {
+  @include mBot(250px, 180px, 150px, 120px);
+}
+.p-t-250 {
+  @include pTop(250px, 180px, 150px, 120px);
+}
+.p-b-250 {
+  @include pBot(250px, 180px, 150px, 120px);
+}
+
+
+.m-t-150 {
+  @include mTop(150px, 120px, 80px, 60px);
+}
+.m-b-150 {
+  @include mBot(150px, 120px, 80px, 60px);
+}
+.p-t-150 {
+  @include pTop(150px, 120px, 80px, 60px);
+}
+.p-b-150 {
+  @include pBot(150px, 120px, 80px, 60px);
+}
+
+.m-t-100 {
+  @include mTop(100px, 80px, 80px, 50px);
+}
+.m-b-100 {
+  @include mBot(100px, 80px, 80px, 50px);
+}
+.p-t-100 {
+  @include pTop(100px, 80px, 80px, 50px);
+}
+.p-b-100 {
+  @include pBot(100px, 80px, 80px, 50px);
+}
+
+
+.m-t-80 {
+  @include mTop(80px, 60px, 60px, 35px);
+}
+.m-b-80 {
+  @include mBot(80px, 60px, 60px, 35px);
+}
+.p-t-80 {
+  @include pTop(80px, 60px, 60px, 35px);
+}
+.p-b-80 {
+  @include pBot(80px, 60px, 60px, 35px);
+}
+
+.m-t-50 {
+  @include mTop(50px, 40px, 40px, 30px);
+}
+.m-b-50 {
+  @include mBot(50px, 40px, 40px, 30px);
+}
+.p-t-50 {
+  @include pTop(50px, 40px, 40px, 30px);
+}
+.p-b-50 {
+  @include pBot(50px, 40px, 40px, 30px);
+}
+
+.m-t-25 {
+  @include mTop(25px, 15px, 15px, 10px);
+}
+.m-b-25 {
+  @include mBot(25px, 15px, 15px, 10px);
+}
+.p-t-25 {
+  @include pTop(25px, 15px, 15px, 10px);
+}
+.p-b-25 {
+  @include pBot(25px, 15px, 15px, 10px);
+}
+
+.m-t-15 {
+  @include mTop(15px, 10px, 10px, 5px);
+}
+.m-b-15 {
+  @include mBot(15px, 10px, 10px, 5px);
+}
+.p-t-15 {
+  @include pTop(15px, 10px, 10px, 5px);
+}
+.p-b-15 {
+  @include pBot(15px, 10px, 10px, 5px);
+}
+
+.m-t-10 {
+  @include mTop(10px, 10px, 10px, 10px);
+}
+.m-b-10 {
+  @include mBot(10px, 10px, 10px, 10px);
+}
+.p-t-10 {
+  @include pTop(10px, 10px, 10px, 10px);
+}
+.p-b-10 {
+  @include pBot(10px, 10px, 10px, 10px);
+}
+
+
+
+
+
+
+
 .m-t-200 {
   @include mTop(200px, 180px, 160px, 160px);
 }
@@ -196,18 +321,6 @@ input[type="number"] {
   @include pBot(100px, 80px, 80px, 60px);
 }
 
-.m-t-80 {
-  @include mTop(80px, 60px, 60px, 60px);
-}
-.m-b-80 {
-  @include mBot(80px, 60px, 60px, 60px);
-}
-.p-t-80 {
-  @include pTop(80px, 60px, 60px, 60px);
-}
-.p-b-80 {
-  @include pBot(80px, 60px, 60px, 60px);
-}
 
 .m-t-60 {
   @include mTop(60px, 60px, 40px, 40px);
@@ -297,95 +410,106 @@ input[type="number"] {
     font-size: $fsSM;
   }
 }
-// .h1 {
-//   font-family: Kelson Sans RU;
-//   font-style: normal;
-//   font-weight: normal;
-//   font-size: 62px;
-//   line-height: 110%;
-//   text-transform: uppercase;
-// }
+
+.h1 {
+  font-family: 'Atyp Display';
+  font-style: normal;
+  font-weight: normal;
+  line-height: 110%;
+  @include fontS(80px, 52px, 52px, 28px);
+}
+
 .h2 {
-  font-family: Neue Machina;
+  font-family: 'Atyp Display';
   font-style: normal;
   font-weight: normal;
-  // font-size: 68px;
   line-height: 110%;
-  text-transform: uppercase;
-  @include fontS(68px, 48px, 36px, 28px);
+  @include fontS(48px, 36px, 32px, 22px);
 }
+
 .h3 {
-  font-family: Neue Machina;
+  font-family: 'Atyp Display';
   font-style: normal;
   font-weight: normal;
-  // font-size: 48px;
-  line-height: 110%;
-  text-transform: uppercase;
-  @include fontS(48px, 36px, 30px, 30px);
+  line-height: 115%;
+  @include fontS(32px, 24px, 24px, 18px);
 }
+
 .h4 {
-  font-family: Neue Machina;
+  font-family: 'Atyp Display';
   font-style: normal;
   font-weight: normal;
-  // font-size: 28px;
-  line-height: 140%;
-  @include fontS(28px, 20px, 20px, 16px);
+  line-height: 115%;
+  @include fontS(28px, 28px, 28px, 24px);
 }
+
 .h5 {
-  font-family: Neue Machina;
+  font-family: 'Atyp Display';
   font-style: normal;
   font-weight: normal;
-  // font-size: 20px;
   line-height: 140%;
-  @include fontS(20px, 16px, 16px, 16px);
+  @include fontS(20px, 16px, 14px, 14px);
 }
+
+.h6 {
+  font-family: 'Vela Sans';
+  font-style: normal;
+  font-weight: normal;
+  line-height: 140%;
+  @include fontS(16px, 14px, 14px, 14px);
+}
+
 .p1,
 p,
 li,
 li > a {
-  font-family: Neue Machina;
+  font-family: 'Vela Sans';
   font-style: normal;
-  font-weight: 300;
+  font-weight: normal;
+  line-height: 150%;
+  @include fontS(14px, 13px, 13px, 12px);
+}
+
+.p2 {
+  font-family: 'Vela Sans';
+  font-style: normal;
+  font-weight: normal;
+  line-height: 150%;
+  @include fontS(12px, 12px, 12px, 12px);
+}
+
+.btn1 {
+  font-family: 'Vela Sans';
+  font-style: normal;
+  font-weight: normal;
+  font-size: 16px;
   line-height: 140%;
   @include fontS(16px, 14px, 14px, 14px);
 }
-.p2 {
-  font-family: Neue Machina;
+
+.cap {
+  font-family: 'Vela Sans';
   font-style: normal;
-  font-weight: 300;
-  // font-size: 14px;
-  line-height: 14px;
-  @include fontS(14px, 12px, 12px, 12px);
-}
-.num1 {
-  font-family: Neue Machina;
-  font-style: normal;
-  font-weight: 300;
-  line-height: 110%;
-  letter-spacing: -0.1em;
+  font-weight: normal;
+  line-height: 150%;
   text-transform: uppercase;
-  @include fontS(790px, 550px, 450px, 250px);
-}
-.num2 {
-  font-family: Neue Machina;
-  font-style: normal;
-  font-weight: 300;
-  // font-size: 200px;
-  @include fontS(200px, 140px, 140px, 80px);
-  line-height: 0.95;
-  text-transform: uppercase;
+  @include fontS(12px, 12px, 12px, 12px);
+
 }
 
 .ttu {
   text-transform: uppercase;
 }
+
 .fwb {
   font-weight: 900;
 }
+
 .w-100 {
   width: 100% !important;
   height: auto;
 }
+
 .h-100 {
   height: 100%;
   object-fit: cover;
@@ -416,14 +540,14 @@ li > a {
 
 .madeAva {
   white-space: nowrap;
-  color: $gray;
+  color: $gray1;
   display: flex;
   align-items: center;
   justify-content: flex-end;
   width: 100%;
   svg {
     margin-left: 10px;
-    fill: $gray;
+    fill: $gray1;
   }
   &:hover,
   &:focus {
@@ -444,21 +568,23 @@ input {
   display: block;
   width: 100%;
   background: transparent;
-  color: $dark;
+  color: currentColor;
   border: none;
-  border-bottom: 1px solid $black;
+  border-bottom: 1px solid currentColor;
   padding: 15px 0;
   margin-bottom: 20px;
-  font-family: Montserrat;
+  font-family: 'Vela Sans';
   font-style: normal;
   font-weight: normal;
+  line-height: 150%;
   font-size: 14px;
   line-height: 140%;
 
   &::placeholder {
-    font-family: Montserrat;
+    font-family: 'Vela Sans';
     font-style: normal;
     font-weight: normal;
+    line-height: 150%;
     font-size: 14px;
     line-height: 140%;
   }
@@ -500,9 +626,33 @@ input {
 //   }
 // }
 
-.orange {
-  color: $orange;
+.bg{
+  &_b1{
+    background-color: $black1;
+    color: $white;
+  }
+  &_b2{
+    background-color: $black2;
+    color: $white;
+  }
+  &_g4{
+    background-color: $gray4;
+    color: $black1;
+  }
 }
-.bg-o {
-  background-color: $orange;
+
+.green{
+  color: $primary;
+}
+.line{
+  border-top: 1px solid currentColor;
+  &_big{
+    border-top: 3px solid currentColor;
+  }
+  &_green{
+    border-color: $primary;
+  }
+}
+.d-inline-grid{
+  display: inline-grid;
 }
